src/Semantic/Parser/MxstarGrammarParser.java
// Generated from /Users/jianglai/IdeaProjects/Mx-compiler2022/src/Semantic.Parser/MxstarGrammar.g4 by ANTLR 4.10.1
package Semantic.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MxstarGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Void=2, Bool=3, Int=4, String=5, New=6, Class=7, Null=8, True=9, 
		False=10, This=11, If=12, Else=13, For=14, While=15, Break=16, Continue=17, 
		Return=18, DIGIT=19, LeftParen=20, RightParen=21, LeftBracket=22, RightBracket=23, 
		LeftBrace=24, RightBrace=25, Plus=26, Minus=27, Star=28, Div=29, Mod=30, 
		GreaterGreater=31, LessLess=32, Equal=33, Less=34, Greater=35, EqualEqual=36, 
		NotEqual=37, LessEqual=38, GreaterEqual=39, AndAnd=40, OrOr=41, Not=42, 
		And=43, Or=44, Caret=45, Wavy=46, PlusPlus=47, MinusMinus=48, Dot=49, 
		Comma=50, Semi=51, Arrow=52, Whitespace=53, Newline=54, LineComment=55, 
		StringLiteral=56, Identifier=57, BlockComment=58;
	public static final int
		RULE_program = 0, RULE_mainFn = 1, RULE_def = 2, RULE_functionParametersList = 3, 
		RULE_functionCallList = 4, RULE_functionDeclaration = 5, RULE_primaryDeclaration = 6, 
		RULE_classConstructor = 7, RULE_classDeclaration = 8, RULE_theTypeName = 9, 
		RULE_bracket = 10, RULE_constantExpression = 11, RULE_primaryExpression = 12, 
		RULE_selfExpression = 13, RULE_singleExpression = 14, RULE_postExpression = 15, 
		RULE_multiplicativeExpression = 16, RULE_mulOperator = 17, RULE_additiveExpression = 18, 
		RULE_additiveOperator = 19, RULE_shiftExpression = 20, RULE_shiftOperator = 21, 
		RULE_relationalExpression = 22, RULE_relationaloperator = 23, RULE_equalityExpression = 24, 
		RULE_equalAndNotEqualoperator = 25, RULE_andExpression = 26, RULE_exclusiveOrExpression = 27, 
		RULE_inclusiveOrExpression = 28, RULE_logicalAndExpression = 29, RULE_logicalOrExpression = 30, 
		RULE_assignmentExpression = 31, RULE_expression = 32, RULE_lambdaExpression = 33, 
		RULE_newExpression = 34, RULE_condition = 35, RULE_statement = 36, RULE_declarationStatement = 37, 
		RULE_expressionStatement = 38, RULE_compoundStatement = 39, RULE_selectionStatement = 40, 
		RULE_jumpStatement = 41, RULE_iterationStatement = 42, RULE_forInitialStatement = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "mainFn", "def", "functionParametersList", "functionCallList", 
			"functionDeclaration", "primaryDeclaration", "classConstructor", "classDeclaration", 
			"theTypeName", "bracket", "constantExpression", "primaryExpression", 
			"selfExpression", "singleExpression", "postExpression", "multiplicativeExpression", 
			"mulOperator", "additiveExpression", "additiveOperator", "shiftExpression", 
			"shiftOperator", "relationalExpression", "relationaloperator", "equalityExpression", 
			"equalAndNotEqualoperator", "andExpression", "exclusiveOrExpression", 
			"inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", 
			"assignmentExpression", "expression", "lambdaExpression", "newExpression", 
			"condition", "statement", "declarationStatement", "expressionStatement", 
			"compoundStatement", "selectionStatement", "jumpStatement", "iterationStatement", 
			"forInitialStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'void'", "'bool'", "'int'", "'string'", "'new'", "'class'", 
			"'null'", "'true'", "'false'", "'this'", "'if'", "'else'", "'for'", "'while'", 
			"'break'", "'continue'", "'return'", null, "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>>'", "'<<'", "'='", 
			"'<'", "'>'", "'=='", "'!='", "'<='", "'>='", "'&&'", "'||'", "'!'", 
			"'&'", "'|'", "'^'", "'~'", "'++'", "'--'", "'.'", "','", "';'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "Void", "Bool", "Int", "String", "New", "Class", "Null", 
			"True", "False", "This", "If", "Else", "For", "While", "Break", "Continue", 
			"Return", "DIGIT", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
			"LeftBrace", "RightBrace", "Plus", "Minus", "Star", "Div", "Mod", "GreaterGreater", 
			"LessLess", "Equal", "Less", "Greater", "EqualEqual", "NotEqual", "LessEqual", 
			"GreaterEqual", "AndAnd", "OrOr", "Not", "And", "Or", "Caret", "Wavy", 
			"PlusPlus", "MinusMinus", "Dot", "Comma", "Semi", "Arrow", "Whitespace", 
			"Newline", "LineComment", "StringLiteral", "Identifier", "BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MxstarGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MxstarGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MxstarGrammarParser.EOF, 0); }
		public List<DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Bool) | (1L << Int) | (1L << String) | (1L << Class) | (1L << Identifier))) != 0)) {
				{
				{
				setState(88);
				def();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFnContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(MxstarGrammarParser.Int, 0); }
		public TerminalNode LeftParen() { return getToken(MxstarGrammarParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(MxstarGrammarParser.RightParen, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public MainFnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterMainFn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitMainFn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitMainFn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainFnContext mainFn() throws RecognitionException {
		MainFnContext _localctx = new MainFnContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainFn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(Int);
			setState(97);
			match(T__0);
			setState(98);
			match(LeftParen);
			setState(99);
			match(RightParen);
			setState(100);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext {
		public MainFnContext mainFn() {
			return getRuleContext(MainFnContext.class,0);
		}
		public DeclarationStatementContext declarationStatement() {
			return getRuleContext(DeclarationStatementContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(102);
				mainFn();
				}
				break;
			case 2:
				{
				setState(103);
				declarationStatement();
				}
				break;
			case 3:
				{
				setState(104);
				classDeclaration();
				}
				break;
			case 4:
				{
				setState(105);
				functionDeclaration();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParametersListContext extends ParserRuleContext {
		public List<TheTypeNameContext> theTypeName() {
			return getRuleContexts(TheTypeNameContext.class);
		}
		public TheTypeNameContext theTypeName(int i) {
			return getRuleContext(TheTypeNameContext.class,i);
		}
		public List<TerminalNode> Identifier() { return getTokens(MxstarGrammarParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MxstarGrammarParser.Identifier, i);
		}
		public List<TerminalNode> Comma() { return getTokens(MxstarGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MxstarGrammarParser.Comma, i);
		}
		public FunctionParametersListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParametersList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterFunctionParametersList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitFunctionParametersList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitFunctionParametersList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionParametersListContext functionParametersList() throws RecognitionException {
		FunctionParametersListContext _localctx = new FunctionParametersListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionParametersList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			theTypeName();
			setState(109);
			match(Identifier);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(110);
				match(Comma);
				setState(111);
				theTypeName();
				setState(112);
				match(Identifier);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallListContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(MxstarGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MxstarGrammarParser.Comma, i);
		}
		public FunctionCallListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCallList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterFunctionCallList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitFunctionCallList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitFunctionCallList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallListContext functionCallList() throws RecognitionException {
		FunctionCallListContext _localctx = new FunctionCallListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionCallList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			expression();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(120);
				match(Comma);
				setState(121);
				expression();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MxstarGrammarParser.Identifier, 0); }
		public TerminalNode LeftParen() { return getToken(MxstarGrammarParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(MxstarGrammarParser.RightParen, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public TheTypeNameContext theTypeName() {
			return getRuleContext(TheTypeNameContext.class,0);
		}
		public TerminalNode Void() { return getToken(MxstarGrammarParser.Void, 0); }
		public FunctionParametersListContext functionParametersList() {
			return getRuleContext(FunctionParametersListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Bool:
			case Int:
			case String:
			case Identifier:
				{
				setState(127);
				theTypeName();
				}
				break;
			case Void:
				{
				setState(128);
				match(Void);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(131);
			match(Identifier);
			setState(132);
			match(LeftParen);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool) | (1L << Int) | (1L << String) | (1L << Identifier))) != 0)) {
				{
				setState(133);
				functionParametersList();
				}
			}

			setState(136);
			match(RightParen);
			setState(137);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryDeclarationContext extends ParserRuleContext {
		public TheTypeNameContext theTypeName() {
			return getRuleContext(TheTypeNameContext.class,0);
		}
		public List<TerminalNode> Identifier() { return getTokens(MxstarGrammarParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MxstarGrammarParser.Identifier, i);
		}
		public List<TerminalNode> Equal() { return getTokens(MxstarGrammarParser.Equal); }
		public TerminalNode Equal(int i) {
			return getToken(MxstarGrammarParser.Equal, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(MxstarGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MxstarGrammarParser.Comma, i);
		}
		public PrimaryDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterPrimaryDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitPrimaryDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitPrimaryDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryDeclarationContext primaryDeclaration() throws RecognitionException {
		PrimaryDeclarationContext _localctx = new PrimaryDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_primaryDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			theTypeName();
			setState(140);
			match(Identifier);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Equal) {
				{
				setState(141);
				match(Equal);
				setState(142);
				expression();
				}
			}

			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(145);
				match(Comma);
				setState(146);
				match(Identifier);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Equal) {
					{
					setState(147);
					match(Equal);
					setState(148);
					expression();
					}
				}

				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassConstructorContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MxstarGrammarParser.Identifier, 0); }
		public TerminalNode LeftParen() { return getToken(MxstarGrammarParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(MxstarGrammarParser.RightParen, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ClassConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classConstructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterClassConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitClassConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitClassConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassConstructorContext classConstructor() throws RecognitionException {
		ClassConstructorContext _localctx = new ClassConstructorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classConstructor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(Identifier);
			setState(157);
			match(LeftParen);
			setState(158);
			match(RightParen);
			setState(159);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(MxstarGrammarParser.Class, 0); }
		public TerminalNode Identifier() { return getToken(MxstarGrammarParser.Identifier, 0); }
		public TerminalNode LeftBrace() { return getToken(MxstarGrammarParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(MxstarGrammarParser.RightBrace, 0); }
		public TerminalNode Semi() { return getToken(MxstarGrammarParser.Semi, 0); }
		public List<DeclarationStatementContext> declarationStatement() {
			return getRuleContexts(DeclarationStatementContext.class);
		}
		public DeclarationStatementContext declarationStatement(int i) {
			return getRuleContext(DeclarationStatementContext.class,i);
		}
		public List<ClassConstructorContext> classConstructor() {
			return getRuleContexts(ClassConstructorContext.class);
		}
		public ClassConstructorContext classConstructor(int i) {
			return getRuleContext(ClassConstructorContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxstarGrammarListener ) ((MxstarGrammarListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxstarGrammarVisitor ) return ((MxstarGrammarVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
